changed founders to array on the rendered front end

--- a/views/founders.html
+++ b/views/founders.html
@@ -6,7 +6,9 @@
       {{ company.name }}
       {{ company.description }}
       {{ company.website }}
-      {{ company.founders }}
+      {% for founder in company.founders %}
+        {{ founder }}
+      {% endfor %}
       {{ company.logo }}
     {% endfor %}
   </div>
