--- a/views/founders.html
+++ b/views/founders.html
@@ -7,7 +7,8 @@
       {{ company.description }}
       {{ company.website }}
       {% for founder in company.founders %}
-        {{ founder }}
+        {{ founder.name }}
+        {{ founder.email }}
       {% endfor %}
       {{ company.logo }}
     {% endfor %}
