added meta data to html for mobile

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,6 +2,7 @@
 <head>
   <title>Yo Founders</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="container">
