added margin on top of 404 page

--- a/views/404.html
+++ b/views/404.html
@@ -10,7 +10,7 @@
       font-weight: 100;
     }
   </style>
-  <div class="row">
+  <div class="row" style="margin-top: 50px">
     <p class="dark-grey description">
       Sorry, there are no startups around you! Try again somewhere else!
     </p>
