--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,24 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-Hello world.
+<style>
+  html, body {
+    background: #9B59B6
+  }
+  .description {
+    font-size: 2em;
+    font-weight: 100;
+  }
+</style>
+
+<div class="row" style="text-align: center; color: white; margin-top: 100px;">
+  <div style="width: 600px; margin: 0 auto">
+    <p style="font-size: 6em; font-weight: 800">
+      YOFOUNDERS
+    </p>
+    <p class="description">
+      Yo "YOFOUNDERS" and get contact information and other details about the nearest startups around you.
+    </p>
+  </div>
+</div>
 {% endblock %}
