added graceful fail if blank distance

--- a/views/founders.html
+++ b/views/founders.html
@@ -31,7 +31,9 @@
             </span>
             <br>
             <span class="grey">
-              {{ company.distance }} away
+              {% if company.distance %}
+                {{ company.distance }} away
+              {% endif %}
             </span>
           </p>
           <p>
