added deep link from launch page

--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,9 @@
 </style>
 
 <div class="row" style="text-align: center; color: white; margin-top: 100px;">
-  <div style="width: 600px; margin: 0 auto">
+  <div style="max-width: 600px; margin: 0 auto">
     <p style="font-size: 6em; font-weight: 800">
-      YOFOUNDERS
+      <a href="http://www.justyo.co/YOFOUNDERS" style="text-decoration: none; color: white">YOFOUNDERS</a>
     </p>
     <p class="description">
       Yo "YOFOUNDERS" and get contact information and other details about the nearest startups around you.
