--- a/views/404.html
+++ b/views/404.html
@@ -6,11 +6,11 @@
       color: #6B6B6B;
     }
     .description {
-      font-size: 2em;
+      font-size: 2.4em;
       font-weight: 100;
     }
   </style>
-  <div class="row" style="margin-top: 50px">
+  <div class="row" style="margin: 30px">
     <p class="dark-grey description">
       Sorry, there are no startups around you! Try again somewhere else!
     </p>
