fix launch page responsive on mobile

--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,20 @@
       font-size: 2em;
       font-weight: 100;
     }
+    .container {
+    width: 800px;
+    max-width: 90%;
+    }
+    .title {
+    font-size: 3em;
+    font-weight: 800;
+    margin: auto;
+    }
   </style>
 
   <div class="row" style="text-align: center; color: white; margin-top: 100px;">
     <div style="max-width: 600px; margin: 0 auto">
-      <p style="font-size: 6em; font-weight: 800">
+      <p class="title">
         <a href="http://www.justyo.co/YOFOUNDERS" style="text-decoration: none; color: white">YOFOUNDERS</a>
       </p>
       <p class="description">
