--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,13 @@
     font-weight: 800;
     margin: auto;
     }
+    .screenshot {
+    max-width:100%;
+    height:auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
   </style>
 
   <div class="row" style="text-align: center; color: white; margin-top: 100px;">
@@ -30,4 +37,7 @@
       </p>
     </div>
   </div>
+
+ <a href="http://justyo.co/YOFOUNDERS/"><img src="http://i.imgur.com/KBrDERg.png" alt="" class="screenshot"> </a>
+
 {% endblock %}
