--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,12 @@
     margin-left: auto;
     margin-right: auto;
     }
+    @media (max-width: 1280px) {
+      .desktop_only { visibility: hidden; }
+    }
   </style>
+
+<div class="desktop_only"><a href="https://github.com/lambtron/yofounders"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a></div>
 
   <div class="row" style="text-align: center; color: white; margin-top: 100px;">
     <div style="max-width: 600px; margin: 0 auto">
