--- a/views/index.html
+++ b/views/index.html
@@ -43,6 +43,6 @@
     </div>
   </div>
 
- <a href="http://justyo.co/YOFOUNDERS/"><img src="http://i.imgur.com/KBrDERg.png" alt="" class="screenshot"> </a>
+ <a href="http://justyo.co/YOFOUNDERS/"><img src="http://i.imgur.com/x3xDZpS.png" alt="" class="screenshot"> </a>
 
 {% endblock %}
