--- a/views/founders.html
+++ b/views/founders.html
@@ -6,7 +6,7 @@
       color: #A8A8A8;
     }
     .dark-grey {
-      color: #6B6B6B;
+      color: #282828;
     }
     .description {
       font-size: 1.1em;
